RESOLVED FIXED230405
[css-grid] FlexType is not applicable to min track sizing
https://bugs.webkit.org/show_bug.cgi?id=230405
Summary [css-grid] FlexType is not applicable to min track sizing
zsun
Reported 2021-09-17 07:56:45 PDT
FlexType is not applicable to min track sizing
Attachments
Patch (1.69 KB, patch)
2021-09-17 08:11 PDT, zsun
no flags
Patch (2.42 KB, patch)
2021-09-20 06:49 PDT, zsun
no flags
Patch (1.69 KB, patch)
2021-09-20 11:36 PDT, zsun
no flags
zsun
Comment 1 2021-09-17 08:11:07 PDT
Sergio Villar Senin
Comment 2 2021-09-20 03:33:44 PDT
Comment on attachment 438477 [details] Patch Nice cleanup. Isn't there another instance of this in GridTrackSizingAlgorithm::isIntrinsicSizedGridArea() ?
zsun
Comment 3 2021-09-20 06:49:08 PDT
zsun
Comment 4 2021-09-20 11:36:44 PDT
EWS
Comment 5 2021-09-21 00:09:03 PDT
Committed r282801 (241933@main): <https://commits.webkit.org/241933@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 438704 [details].
Radar WebKit Bug Importer
Comment 6 2021-09-21 00:10:16 PDT
Note You need to log in before you can comment on or make changes to this bug.