[css-grid] FlexType is not applicable to min track sizing https://bugs.webkit.org/show_bug.cgi?id=230405

Reviewed by Sergio Villar Senin.

For min track sizing, flexType is not applicable and shouldn't need a check.
This change is to remove the check that should not happen. No behaviour changes with
this change.

* rendering/GridTrackSizingAlgorithm.cpp:
(WebCore::GridTrackSizingAlgorithm::spanningItemCrossesFlexibleSizedTracks const):


Canonical link: https://commits.webkit.org/241933@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@282801 268f45cc-cd09-0410-ab3c-d52691b4dbfc